--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
         "@symfony/stimulus-bridge": "^3.2.0",
         "@symfony/ux-autocomplete": "file:vendor/symfony/ux-autocomplete/assets",
         "@symfony/webpack-encore": "^4.7.0",
+        "autoprefixer": "^10.4.20",
         "file-loader": "^6.2.0",
+        "postcss": "^8.4.47",
+        "postcss-loader": "^8.1.1",
+        "tailwindcss": "^3.4.13",
         "tom-select": "^2.2.2",
         "webpack-notifier": "^1.15.0"
     },
