--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,7 @@
+api_login_check:
+    path: /api/auth
+api_refresh_token:
+    path: /api/token/refresh
 controllers:
     resource:
         path: ../src/Controller/
