feature: almost finish register and login logic and pages

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -10,21 +10,20 @@ security:
                 class: App\Entity\User
                 property: email
     firewalls:
-        login:
-            pattern: ^/api/auth
-            stateless: true
-            json_login:
-                check_path: /api/auth
-                success_handler: lexik_jwt_authentication.handler.authentication_success
-                failure_handler: lexik_jwt_authentication.handler.authentication_failure
-            custom_authenticator: App\Security\AppCustomAuthenticator
+#        login:
+#            pattern: ^/api/login
+#            stateless: true
+#            json_login:
+#                check_path: /api/login_check
+#                success_handler: lexik_jwt_authentication.handler.authentication_success
+#                failure_handler: lexik_jwt_authentication.handler.authentication_failure
 
         api:
             pattern: ^/api
             stateless: true
             entry-point: jwt
-            custom_authenticators:
-                - App\Security\AppCustomAuthenticator
+#            custom_authenticators:
+#                - App\Security\AppCustomAuthenticator
             jwt: ~
 #            refresh_jwt:
 #                check_path: /api/token/refresh
@@ -36,6 +35,16 @@ security:
         main:
             lazy: true
             provider: app_user_provider
+            form_login:
+                enable_csrf: true
+                login_path: login
+                check_path: login
+                username_parameter: 'login_form[email]'
+                password_parameter: 'login_form[password]'
+                default_target_path: app_home
+            logout:
+                path: app_logout
+                target: app_home
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -46,7 +55,7 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/api/(login|token/refresh), roles: PUBLIC_ACCESS }
+        - { path: ^/api/login, roles: PUBLIC_ACCESS }
         - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
 
 when@test:
