--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,5 +1,7 @@
+login_check:
+    path: /login_check
 api_login_check:
-    path: /api/auth
+    path: /api/login_check
 api_refresh_token:
     path: /api/token/refresh
 controllers:
