--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "@symfony/ux-autocomplete": "file:vendor/symfony/ux-autocomplete/assets",
         "@symfony/webpack-encore": "^4.7.0",
         "autoprefixer": "^10.4.20",
+        "css-minimizer-webpack-plugin": "^7.0.0",
         "file-loader": "^6.2.0",
         "postcss": "^8.4.47",
         "postcss-loader": "^8.1.1",
